<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trip"
            android:icon="@drawable/ic_trips"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:title="@string/trips" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_maps"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_bookmark"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:title="@string/bookmark" />
        <item
            android:id="@+id/nav_overlay"
            android:icon="@drawable/ic_overlays"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:title="@string/overlays" />
        <item
            android:id="@+id/nav_offline_toggle"
            android:icon="@drawable/ic_cloud_off"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:title="@string/go_offline"
            app:actionLayout="@layout/layout_switch" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_shopping_cart"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:title="@string/shop" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/side_bar_account"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:title="@string/help" />
    </group>
</menu>
