<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_map_action_unpin"
        android:icon="@drawable/ic_unpin"
        android:orderInCategory="99"
        android:title="@string/menu_item_unpin" />
    <item
        android:id="@+id/item_map_action_pin"
        android:icon="@drawable/ic_pin"
        android:orderInCategory="100"
        android:title="@string/menu_item_pin" />
    <item
        android:id="@+id/item_map_action_delete"
        android:icon="@drawable/ic_trash"
        android:orderInCategory="104"
        android:title="@string/item_trip_action_delete" />

    <item
        android:id="@+id/item_map_action_open"
        android:icon="@drawable/icon_open"
        android:orderInCategory="104"
        android:title="@string/item_map_action_open" />
</menu>