<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_desc"
        style="@style/caption_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_desc_quick_access" />


    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_fullscreen_mode"
        style="@style/body_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/switch_compat_height"
        android:text="@string/txt_fullscreen_mode" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_scale_bar"
        style="@style/body_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/txt_scale_bar" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_statistic"
        style="@style/body_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/switch_compat_height"
        android:text="@string/txt_statistic" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_map_sources"
        style="@style/body_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/switch_compat_height"
        android:text="@string/txt_map_sources" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_zoom"
        style="@style/body_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/switch_compat_height"
        android:text="@string/txt_zoom" />


</LinearLayout>