<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        style="@style/settingCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_vertical_margin"
        android:text="@string/txt_rotation" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_allow_rotation"
        style="@style/body_dark"
        android:layout_width="match_parent"
        android:layout_height="@dimen/switch_compat_height"
        android:text="@string/txt_allow_map_rotation" />

    <TextView
        style="@style/settingCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_compass" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:orientation="horizontal">

        <TextView
            style="@style/body_dark"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/txt_compass_style" />

        <RadioGroup
            android:id="@+id/radio_group_compass_stype"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        style="@style/body_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:text="@string/txt_map_arrow"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:orientation="horizontal">

        <TextView
            style="@style/body_dark"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/txt_compass_sensor" />

        <RadioGroup
            android:id="@+id/radio_group_compass_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>