<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <LinearLayout
        android:id="@+id/filterTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toTopOf="@+id/map_source_rcv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <TextView
            android:textColor="@color/black_white"
            style="@style/ParagraphCenterDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/suggestion_map_text"
            tools:text="@string/suggestion_map_text" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:columnCount="3">

            <CheckBox
                android:id="@+id/cb_topo"
                android:layout_columnWeight="1"
                android:checked="true"
                android:text="@string/topo" />

            <CheckBox
                android:id="@+id/cb_marine"
                android:layout_columnWeight="1"
                android:checked="true"
                android:text="@string/marine" />

            <CheckBox
                android:id="@+id/cb_hybrid"
                android:layout_columnWeight="1"
                android:checked="true"
                android:text="@string/hybrid" />

            <CheckBox
                android:id="@+id/cb_satellite"
                android:layout_columnWeight="1"
                android:checked="true"
                android:text="@string/satellite" />

            <CheckBox
                android:id="@+id/cb_street"
                android:layout_columnWeight="1"
                android:checked="true"
                android:text="@string/street" />

            <CheckBox
                android:id="@+id/cb_aviation"
                android:layout_columnWeight="1"
                android:checked="true"
                android:text="@string/aviation" />
        </GridLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/map_source_rcv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterTable"
        tools:listitem="@layout/map_source_item" />
</android.support.constraint.ConstraintLayout>