<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icn_home_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

  <android.support.v7.widget.Toolbar
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:id="@+id/tool_bar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@color/transparent"
      android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
      >
    <TextView
        android:id="@+id/skip_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="end"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="@dimen/button_font_size"
        />
  </android.support.v7.widget.Toolbar>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_margin"
      android:paddingRight="@dimen/activity_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      >

    <LinearLayout
        android:id="@+id/main_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sign_up"
          android:textColor="@color/white"
          android:textSize="@dimen/font_size_24"
          />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/activity_vertical_margin"
          android:text="@string/sign_up_text"
          android:textColor="@color/white"
          android:textSize="@dimen/button_font_size"
          />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_56"
        android:gravity="center"
        android:orientation="vertical"
        >
      <Button
          android:id="@+id/sign_up_button"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:background="@drawable/green_border_rounded_button"
          android:text="@string/create_account"
          android:textAllCaps="false"
          android:textColor="@color/greenButton"
          android:textSize="@dimen/button_font_size"
          />

      <Button
          android:id="@+id/facebook_button"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:background="@drawable/facebook_full_rounded_button"
          android:text="@string/facebook"
          android:textAllCaps="false"
          android:textColor="@color/white"
          android:textSize="@dimen/button_font_size"
          />

      <Button
          android:id="@+id/google_button"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_marginTop="@dimen/activity_vertical_margin"
          android:background="@drawable/google_full_rounded_button"
          android:text="@string/google"
          android:textAllCaps="false"
          android:textColor="@color/white"
          android:textSize="@dimen/button_font_size"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/already_have_account"
          android:textColor="@color/white"
          android:textSize="@dimen/font_size_13"
          />

      <TextView
          android:id="@+id/log_in_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/text_space_margin"
          android:layout_marginStart="@dimen/text_space_margin"
          android:text="@string/log_in_now"
          android:textColor="@color/white"
          android:textSize="@dimen/font_size_13"
          android:textStyle="bold"

          />
    </LinearLayout>

  </RelativeLayout>

</LinearLayout>
